--- a/2_Syntax_part1_hw.ipynb
+++ b/2_Syntax_part1_hw.ipynb
@@ -148,8 +148,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "телефонный номер как long, предполагая номера в данном контексте могут содержать только цифры зачем хранит цифры текстом. Плюс единообразная запись\n",
+    "телефонный номер как long, предполагая номера в данном контексте могут содержать только цифры зачем хранит цифры текстом. Плюс единообразная запись.\n",
+    "\n",
     "Дата/время можно хранить одним полем с типом datetime. Вместо двух полей одно, плюс в этом случае появляется возможность использовать методы для работы с интервалами времени.\n",
+    "\n",
     "Аналогичто с длительностью."
    ]
   },
@@ -165,6 +167,45 @@
    "metadata": {},
    "source": [
     "На лекции было рассказано про неизменяемые типы, в частности про tuple. Подумайте, можно ли \"сломать\" неизменяемость tuple? Как сделать tuple изменяемым? Можно ли будет его добавить в множество или использовать в качестве ключа в словаре?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "([1], 2, 3)\n",
+      "([99], 2, 3)\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unhashable type: 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-62-77024490d0a3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m99\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m----> 8\u001b[0;31m \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m{\u001b[0m\u001b[0mb\u001b[0m \u001b[1;33m:\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unhashable type: 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "#можно, если назначить элементом tuple изменяемый тип, например list:\n",
+    "a = [1]\n",
+    "b = (a, 2, 3)\n",
+    "print b\n",
+    "a[0] = 99\n",
+    "print b\n",
+    "#объект тот-же, но его значение изменено\n",
+    "#но как ключ использовать не выйдет, т.к. внутри tuple 'b' находится нехэшируемый list 'a'\n",
+    "d = {b : 1}"
    ]
   },
   {
